DP-3911 - Tooltips - fixing z-index

--- a/styleguide/source/assets/scss/02-molecules/_tooltip.scss
+++ b/styleguide/source/assets/scss/02-molecules/_tooltip.scss
@@ -24,6 +24,7 @@
       left: 50%;
     transform: translateX(-50%);
     width: 100%;
+    z-index: $z-modal;
 
     &--below {
 
